--- a/bmpKonverter/MainWindow.xaml
+++ b/bmpKonverter/MainWindow.xaml
@@ -2,27 +2,34 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="320" Width="518" MinHeight="320" MinWidth="400" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
-    <Grid>
-        <Border BorderBrush="Gray" BorderThickness="1" HorizontalAlignment="Stretch" Height="40" Margin="10,10,10,0" VerticalAlignment="Top">
-            <TextBlock TextWrapping="Wrap" Text="Konverter von BMP nach PNG" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" FontFamily="Cambria"/>
-        </Border>
-        <GroupBox Header="Eingabeverzeichnis" HorizontalAlignment="Stretch" Margin="10,55,10,0" VerticalAlignment="Top" Height="82" BorderBrush="Gray">
-            <Grid HorizontalAlignment="Stretch" Height="60" VerticalAlignment="Top">
-                <TextBox x:Name="InputTxt" Height="22" Margin="10,10,96,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" TextChanged="InputTxt_TextChanged" />
-                <Button x:Name="SearchInputBtn" Content="Durchsuchen" HorizontalAlignment="Right" Margin="0,10,6,0" VerticalAlignment="Top" Width="84" Height="22" Click="SearchInputBtn_Click" />
-                <Label Height="30" Margin="10,31,6,0" Name="InputinfoLbl" Content="   " VerticalAlignment="Top" />
-            </Grid>
-        </GroupBox>
-        <GroupBox Header="Ausgabeverzeichnis" HorizontalAlignment="Stretch" Margin="10,142,10,0" VerticalAlignment="Top" Height="82" BorderBrush="Gray">
-            <Grid HorizontalAlignment="Stretch" Height="60" VerticalAlignment="Top">
-                <TextBox x:Name="OutputTxt" Margin="10,10,96,0" TextWrapping="Wrap" Text="" Height="22" VerticalAlignment="Top" />
-                <Button x:Name="SearchOutputBtn" Content="Durchsuchen" HorizontalAlignment="Right" Margin="0,10,6,0" VerticalAlignment="Top" Width="84" Height="22" Click="SearchOutputBtn_Click" />
-            </Grid>
-        </GroupBox>
-        <Button x:Name="StartBtn" Content="Start" HorizontalAlignment="Left" Margin="10,229,0,0" VerticalAlignment="Top" Width="107" Height="35" FontSize="14" FontWeight="Bold" Click="StartBtn_Click" />
-        <ProgressBar Height="15" Margin="270,229,12,0" Name="StatusPb" VerticalAlignment="Top" />
-        <Label Height="30" Margin="270,243,12,0" Name="StatusLbl" Content="   " VerticalAlignment="Top" />
-        <Button Content="Überwachen" FontSize="14" FontWeight="Bold" Height="35" HorizontalAlignment="Left" Margin="123,229,0,0" Name="WatchBtn" VerticalAlignment="Top" Width="107" Click="WatchBtn_Click" />
-        <Button Content="+1" Height="24" HorizontalAlignment="Left" Margin="466,131,0,0" Name="button1" VerticalAlignment="Top" Width="30" Click="button1_Click" />
-    </Grid>
+	<Window.Resources>
+		<Style x:Key="BigButton" TargetType="{x:Type Button}">
+			<Setter Property="FontSize" Value="15" />
+			<Setter Property="Height" Value="35" />
+			<Setter Property="FontWeight" Value="DemiBold" />
+		</Style>
+	</Window.Resources>
+	<Grid>
+		<Border BorderBrush="Gray" BorderThickness="1" HorizontalAlignment="Stretch" Height="40" Margin="10,10,61,0" VerticalAlignment="Top">
+			<TextBlock TextWrapping="Wrap" Text="Konverter von BMP nach PNG" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontFamily="Segoe UI Semibold" Margin="10,0,0,0" />
+		</Border>
+		<GroupBox Header="Eingabeverzeichnis" HorizontalAlignment="Stretch" Margin="10,55,10,0" VerticalAlignment="Top" Height="82" BorderBrush="Gray">
+			<Grid HorizontalAlignment="Stretch" Height="60" VerticalAlignment="Top">
+				<TextBox x:Name="InputTxt" Height="22" Margin="10,10,96,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" TextChanged="InputTxt_TextChanged" />
+				<Button x:Name="SearchInputBtn" Content="Durchsuchen" HorizontalAlignment="Right" Margin="0,10,6,0" VerticalAlignment="Top" Width="84" Height="22" Click="SearchInputBtn_Click" />
+				<Label Height="30" Margin="10,31,6,0" Name="InputinfoLbl" Content="   " VerticalAlignment="Top" />
+			</Grid>
+		</GroupBox>
+		<GroupBox Header="Ausgabeverzeichnis" HorizontalAlignment="Stretch" Margin="10,142,10,0" VerticalAlignment="Top" Height="82" BorderBrush="Gray">
+			<Grid HorizontalAlignment="Stretch" Height="60" VerticalAlignment="Top">
+				<TextBox x:Name="OutputTxt" Margin="10,10,96,0" TextWrapping="Wrap" Text="" Height="22" VerticalAlignment="Top" />
+				<Button x:Name="SearchOutputBtn" Content="Durchsuchen" HorizontalAlignment="Right" Margin="0,10,6,0" VerticalAlignment="Top" Width="84" Height="22" Click="SearchOutputBtn_Click" />
+			</Grid>
+		</GroupBox>
+		<Button x:Name="StartBtn" Content="Start" HorizontalAlignment="Left" Margin="10,229,0,0" VerticalAlignment="Top" Width="107" Style="{DynamicResource BigButton}" Click="StartBtn_Click" />
+		<ProgressBar Height="15" Margin="270,229,12,0" Name="StatusPb" VerticalAlignment="Top" />
+		<Label Height="30" Margin="270,243,12,0" Name="StatusLbl" Content="   " VerticalAlignment="Top" />
+		<Button Content="Überwachen" HorizontalAlignment="Left" Margin="123,229,0,0" Name="WatchBtn" VerticalAlignment="Top" Width="107" Click="WatchBtn_Click" Style="{DynamicResource BigButton}" />
+		<Button Content="+1" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="46" Click="button1_Click"  Style="{DynamicResource BigButton}" Height="40" />
+	</Grid>
 </Window>
